# Eve

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/testing_app/: _init_.py  eve_market.py  main.py
tests/: test_main.py
